<resources>

    <string name="app_name">Try</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_image">Escanear imagen</string>
    <string name="name">Nombre</string>
    <string name="category">Rubro</string>
    <string name="category_type">Tipo de Rubro</string>
    <string name="barcode">Código de barras</string>
    <string name="portion">Porción</string>
    <string name="portion_type">Tipo de porción</string>
    <string name="trademark">Marca</string>
    <string name="net_weight">Contenido neto</string>
    <string name="description">Descripción</string>
    <string name="image_url">URL de imagen</string>
    <string name="is_food">Es alimento?</string>
    <string name="hint_category">Aceite, Azúcar, ...</string>
    <string name="hint_portion">25, 50, 100</string>
    <string name="hint_trademark">Arcor, Nestlé, ...</string>
    <string name="hint_net_weight">30 gr, 200 ml, ...</string>
    <string name="next">Siguiente</string>
    <string name="username">Nombre de usuario</string>
    <string name="button_login">Iniciar Sesión</string>
    <string name="password">Contraseña</string>
    <string name="text_product">Producto</string>
    <string name="text_packaging">Envase</string>
    <string name="returnable">Retornable</string>
    <string name="reusable">Reutilizable</string>
    <string name="recyclable">Reciclable</string>
    <string name="compostable">Compostable</string>
    <string name="raw_materials_recycled">Materias primas recicladas</string>
    <string name="certificated">Certificación de origen de materias primas</string>
    <string name="manufacturer">Fabricante</string>
    <string name="business_name">Razón Social</string>
    <string name="surname">Apellido</string>
    <string name="user">Usuario</string>
    <string name="ingredients">Ingredientes</string>
    <string name="id">Id</string>
    <string name="warning">Con advertencia</string>
    <string name="add">Agregar</string>
    <string name="ingredient">Ingrediente</string>
    <string name="information_link">Link de información</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="labels">Etiquetas</string>
    <string name="label">Etiqueta</string>
    <string name="logo_url">Url de logo</string>
    <string name="dairy_recommendation">Valor diario</string>
    <string name="nutrition_facts">Información nutricional</string>
    <string name="calories">Valor energético</string>
    <string name="carbohydrate">Carbohidratos</string>
    <string name="proteins">Proteínas</string>
    <string name="fat_total">Grasas totales</string>
    <string name="fat_saturated">Grasas saturadas</string>
    <string name="fat_trans">Grasas trans</string>
    <string name="fiber">Fibra Alimentaria</string>
    <string name="sodium">Sodio</string>
    <string name="other_nutrition_facts">Otros nutrientes</string>
    <string name="nutrients">Nutrientes</string>
    <string name="nutrient">Nutriente</string>
    <string name="selection">Selección</string>
    <string name="delete">Eliminar</string>
    <string name="packagingType">Código de tipo de envase</string>
    <string name="products">Productos</string>
    <string name="actions">Acciones</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirmUpdate">¿Está seguro de que desea actualizar este producto?</string>
    <string name="epaClassification">Clasificación EPA</string>
    <string name="isChecked">Incluye</string>


    <string-array name="category_types">
        <item>Alimentación</item>
        <item>Cosmética</item>
        <item>Limpieza</item>
    </string-array>
    <string-array name="returnable">
        <item>Retornable Reutilizable</item>
        <item>Retornable Reciclable</item>
        <item>Potencialmente Retornable</item>
        <item>No Retornable</item>
    </string-array>
    <string-array name="reusable">
        <item>Muy Reutilizable</item>
        <item>Poco Reutilizable</item>
        <item>No Reutilizable o raramente Reutilizable</item>
    </string-array>
    <string-array name="recyclable">
        <item>Reciclable Facil</item>
        <item>Reciclable Dificil</item>
        <item>No Reciclable</item>
        <item>Tratamiento Especial</item>
    </string-array>
    <string-array name="compostable">
        <item>Compostable</item>
        <item>No Compostable</item>
    </string-array>
    <string-array name="rawMaterialsRecycled">
        <item>Altamente Recicladas</item>
        <item>Recicladas Parcialmente</item>
        <item>No Recicladas</item>
    </string-array>
    <string-array name="certificated">
        <item>Certificacion</item>
        <item>No Certificadas</item>
    </string-array>
    <string-array name="portion_types">
        <item>g</item>
        <item>mg</item>
        <item>l</item>
        <item>ml</item>
        <item>kcal</item>
    </string-array>
    <string-array name="epa_classifications">
        <item>Green Circle</item>
        <item>Green Half-circle</item>
        <item>Yellow triangle</item>
        <item>Gray square</item>
    </string-array>
</resources>
