<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="NutritionFactsTableViewModel"
            type="com.example.atry.nutritionFactsTable.NutritionFactsTableViewModel" />
        <variable
            name="NutritionFactsBinding"
            type="com.example.atry.nutritionFactsTable.NutritionFactsTable" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".NutritionFactsTable">

                <TextView
                    android:id="@+id/text_nutrition_facts_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/nutrients"
                    android:textColor="@color/primaryColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/divider5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <View
                    android:id="@+id/divider5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_nutrition_facts_table" />

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:onClick="@{() -> NutritionFactsTableViewModel.onAddButtonClicked()}"
                    android:text="@string/add"
                    app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider5" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_add">

                    <ScrollView
                        android:id="@+id/scrollTable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableLayout
                            android:id="@+id/tableHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:stretchColumns="*">

                            <TableRow
                                android:id="@+id/tableRow"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/secondaryLightColor"
                                android:padding="5dp">

                                <TextView
                                    android:id="@+id/text_selected"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1.2"
                                    android:text="@string/selection"
                                    android:textAlignment="center"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/text_id"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0"
                                    android:text="@string/id"
                                    android:textAlignment="center"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/text_name"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/name"
                                    android:textAlignment="center"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/text_description"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1.5"
                                    android:text="@string/description"
                                    android:textAlignment="center"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/text_dairy_recommendation"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/dairy_recommendation"
                                    android:textAlignment="center"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/text_portion_type"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/portion_type"
                                    android:textAlignment="center"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/text_information_link"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/information_link"
                                    android:textAlignment="center"
                                    android:textSize="14sp" />
                            </TableRow>
                        </TableLayout>
                    </ScrollView>
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_margin="16dp"
            android:onClick="@{() -> NutritionFactsTableViewModel.onNextButtonClicked()}"
            android:src="@drawable/ic_arrow_back_ios_24px"
            android:text="@string/next" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>