<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ProductsTableViewModel"
            type="com.example.atry.productsTable.ProductsTableViewModel" />
        <variable
            name="ProductsBinding"
            type="com.example.atry.productsTable.ProductsTable" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Products">

                <TextView
                    android:id="@+id/text_labels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/products"
                    android:textColor="@color/primaryColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_labels" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider">

                    <ScrollView
                        android:id="@+id/scrollTable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableLayout
                            android:id="@+id/tableHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="2dp"
                            android:stretchColumns="*">

                            <TableRow
                                android:id="@+id/tableRow"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/secondaryLightColor"
                                android:padding="5dp">

                                <TextView
                                    android:id="@+id/text_id"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/id" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/name" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/user" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/actions" />
                            </TableRow>
                        </TableLayout>
                    </ScrollView>
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:onClick="@{() -> ProductsTableViewModel.onNextButtonClicked()}"
            android:src="@drawable/ic_navigate_next_24px"
            android:text="@string/next" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>